<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/superLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.MainActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/filmScrollView"
        app:layout_constraintStart_toStartOf="@+id/filmScrollView"
        app:layout_constraintTop_toTopOf="@+id/searchlayout" />

    <LinearLayout
        android:id="@+id/searchlayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:hint="@string/search"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinnerGenre"
            style="@style/spinner_style_drama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spinnerCountry"
            style="@style/spinner_style_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spinnerFromYear"
            style="@style/spinner_yearfrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerToYear"
            style="@style/spinner_yearto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/yearDurationBtn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_year_duration_button_selector"
            android:scaleType="fitXY" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/filmScrollView"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topButtonsNestedLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:id="@+id/linearLayoutLastAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastAddedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byDateAdded"
                    android:textSize="18sp" />


                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/lastAddedRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:fadeScrollbars="false"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutByPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/worldfilmTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byPopularity"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/byPopularityFilmRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutByViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ourfilmTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byViews"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/byViewsFilmRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutByRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/animationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byRating"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/byRatingRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutByName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/animationSerialTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byName"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/byNameRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutByDatePremiere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/worldSerialTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/byDatePremiere"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/byDatePremiereRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEstimated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/owrSerialTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/estimated"
                    android:textSize="18sp" />

                <net.matrixhome.kino.gui.CustomRecyclerView
                    android:id="@+id/estimatedRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="horizontal" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/topButtonsNestedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:fillViewport="false"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@id/filmScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchlayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="ifContentScrolls">

            <Button
                android:id="@+id/filmsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_menu_btn_selector"
                android:text="@string/films" />

            <Button
                android:id="@+id/animBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_menu_btn_selector"
                android:text="@string/animation" />

            <Button
                android:id="@+id/serialBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_menu_btn_selector"
                android:text="@string/serials" />

            <Button
                android:id="@+id/animSerialBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_menu_btn_selector"
                android:text="@string/animation_serial" />

            <Button
                android:id="@+id/tvShowBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_menu_btn_selector"
                android:text="@string/tv_shows" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>