<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerDesc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".gui.DescriptionActivity">


    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seasonSelectLayout">

        <Button
            android:id="@+id/playVideoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letsplay" />

        <Button
            android:id="@+id/downloadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seasonSelectLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:weightSum="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLayout">

        <TextView
            android:id="@+id/seasonSignTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_season" />


        <net.matrixhome.kino.gui.CustomRecyclerView
            android:id="@+id/seasonChooserRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            tools:itemCount="1" />

        <TextView
            android:id="@+id/episodeSignTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/episode" />

        <net.matrixhome.kino.gui.CustomRecyclerView
            android:id="@+id/episodeChooserRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:itemCount="1">

        </net.matrixhome.kino.gui.CustomRecyclerView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/youtubePlayTrailerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/youtube_trailer_button"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="218dp"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nameImageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seasonSelectLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewDescFragmnet"
                android:layout_width="155dp"
                android:layout_height="220dp"
                android:foregroundGravity="top"
                android:minHeight="150dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_icon" />

            <TextView
                android:id="@+id/ratingDiscTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/exo_error_message_background_color"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewDescFragmnet"
                app:layout_constraintEnd_toEndOf="@+id/imageViewDescFragmnet" />

            <TextView
                android:id="@+id/ageDiscTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/exo_error_message_background_color"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewDescFragmnet"
                app:layout_constraintStart_toStartOf="@id/imageViewDescFragmnet" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/discrConstraint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minHeight="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewDescFragmnet"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/filmNameDescFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/country"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/filmGenreDescFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/filmCountryDescFragment" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:text="@string/year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/filmNameDescFragment" />

                <TextView
                    android:id="@+id/filmYearDescFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start|center_horizontal"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/filmNameDescFragment" />

                <TextView
                    android:id="@+id/filmActorsDesActivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/filmDirectorDescFragment" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/actors"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/director"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/filmDirectorDescFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/filmGenreDescFragment" />

                <TextView
                    android:id="@+id/filmCountryDescFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/filmYearDescFragment" />

                <TextView
                    android:id="@+id/translateDscrTV"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/translate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filmActorsDesActivity" />

                <TextView
                    android:id="@+id/translateTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:textColor="@color/white_focused_season_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/translateDscrTV"
                    app:layout_constraintTop_toBottomOf="@+id/filmActorsDesActivity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/translateDscrTV">

                    <TextView
                        android:id="@+id/isHDDiscrp"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/ishd" />

                    <TextView
                        android:id="@+id/isHD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_focused_season_btn" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>